[其他] 更新一波依赖